[tool.poetry]
name = "pyoarfish"
version = "0.1.0"
description = ""
authors = ["shanhaikang.shk <shanhaikang.shk@oceanbase.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
numpy = "^2.0.0"
pymysql = "^1.1.1"

[[tool.poetry.source]]
name = "china"
url = "https://pypi.antfin-inc.com/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "pipy"
url = "https://pypi.org/simple/"
priority = "supplemental"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"